AWS s3 configured with Files uploading for products